--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             <button class="basic">7</button>
             <button class="basic">8</button>
             <button class="basic">9</button>
-            <button class="clearButton">AC</button>
+            <button class="clearButton basic">CLEAR</button>
         </div>
         <div class="secondContainer">
             <button class="basic">4</button>
             <button class="basic">5</button>
             <button class="basic">6</button>
-            <button class="deleteButton">DEL</button>
+            <button class="deleteButton basic">DELETE</button>
         </div>
         <div class="thirdContainer">
             <button class="basic">1</button>
@@ -33,9 +33,9 @@
         <div class="finalContainer">
             <button class="basic">.</button>
             <button class="basic">0</button>
+            <button class="basic">=</button>
             <button class="basic">+</button>
             <button class="basic">-</button>
-            <button class="basic">=</button>
         </div>
         
     </div>
