Add funnctions to clear and to delete one charactor in screen

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             <button class="basic">7</button>
             <button class="basic">8</button>
             <button class="basic">9</button>
-            <button class="clearButton">CLEAR</button>
+            <button id="clearButton">CLEAR</button>
         </div>
         <div class="secondContainer">
             <button class="basic">4</button>
             <button class="basic">5</button>
             <button class="basic">6</button>
-            <button class="deleteButton">DELETE</button>
+            <button id="deleteButton">DELETE</button>
         </div>
         <div class="thirdContainer">
             <button class="basic">1</button>
