Add conditions to functions to prevent unexpected situation with operators

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="finalContainer">
             <button class="basic">.</button>
             <button class="basic">0</button>
-            <button class="basic">=</button>
+            <button id="">=</button>
             <button class="basic">+</button>
             <button class="basic">-</button>
         </div>
