Fixing errors appear in conditions that not allow typing two operators respectively

--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
             <button class="basic">1</button>
             <button class="basic">2</button>
             <button class="basic">3</button>
-            <button class="basic">x</button>
-            <button class="basic">÷</button>
+            <button class="advance">x</button>
+            <button class="advance">÷</button>
         </div>
         <div class="finalContainer">
-            <button class="basic">.</button>
+            <button class="advance">.</button>
             <button class="basic">0</button>
             <button id="">=</button>
-            <button class="basic">+</button>
-            <button class="basic">-</button>
+            <button class="advance">+</button>
+            <button class="advance">-</button>
         </div>
 </body>
 </html>
