Finish function to pick 2 input numbers and caculate them

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="finalContainer">
             <button class="advance">.</button>
             <button class="basic">0</button>
-            <button id="">=</button>
+            <button id="result">=</button>
             <button class="advance">+</button>
             <button class="advance">-</button>
         </div>
