Calculator web done

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 <body>
     <div class="container">
-        <div id="screen">0</div>
+        <div class="screenContainer">
+            <div id="screenTwo"></div>
+            <div id="screenOne">0</div>
+        </div>
+        
         
         <div class="firstContainer">
             <button class="basic">7</button>
@@ -31,7 +35,7 @@
             <button class="advance">÷</button>
         </div>
         <div class="finalContainer">
-            <button class="advance">.</button>
+            <button id="decimal">.</button>
             <button class="basic">0</button>
             <button id="result">=</button>
             <button class="advance">+</button>
